...
            Group{
                HStack{
                    AsyncImage(url: URL(string: thumbnailImage)).aspectRatio(contentMode: .fit).frame(width: 50, height: 50).clipShape(RoundedRectangle(cornerRadius: 10))
                    Text(title).bold()
                    Spacer()
                    if isPreviousSongAvailable{
                        makeButton(imageName: "chevron.backward", id: "previousTrackButton")
                            .opacity(isPreviousSongAvailable ? 1:0)
                        .onTapGesture {
                            guard isPreviousSongAvailable else{return}
                            actions.previous()
                        }
                    }
                    makeButton(imageName: status == .isPlaying ? "pause.fill":"play.fill", id: "play").onTapGesture {
                        actions.playPause()
                    }
                    makeButton(imageName: "chevron.right", id: "nextTrackButton")
                        .opacity(isNextSongAvailable ? 1:0)
                        .onTapGesture {
                        guard isNextSongAvailable else{return}
                        actions.next()
                    }
                }
...
