...
        NavigationView{
            VStack{
                HStack{
                    Image(systemName: "magnifyingglass").renderingMode(.template).tint(.secondary).foregroundStyle(.secondary)
                    if #available(iOS 17.0, *) {
                        TextField("Search", text: $searchText).focused($isFocused)
                        .accessibilityIdentifier("searchTextField")
                        .onChange(of: searchText) { oldValue, newValue in
                            vm.searchTextValueChanged(to: newValue)
                        }
                    }else{
                        TextField("Search", text: $searchText).focused($isFocused)
                            .accessibilityIdentifier("searchTextField")
...
